# hydws-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini  userguide.md
.github/: codecov.yml
.github/workflows/: _tests.yml  publish.yml
hydws/: __init__.py  coordinates.py  parser.py
hydws/client/: __init__.py  hydws.py
hydws/parser/: __init__.py  geomonitor.py  parser.py  rawparser.py  schema.py
hydws/parser/tests/: hydraulics.json  hydraulics.parquet  test_parser.py
hydws/tests/: test_coordinate_transformer.py
notebooks/: dataparser.ipynb  userguide.ipynb
notebooks/data/: hydraulics.csv
