[metadata]
name = hydws-client
author = Schmid Nicolas
author_email = nicolas.schmid@sed.ethz.ch
version = 0.1
description = Client Library for HYDWS
long_description = file: README.md, LICENSE
license = AGPL License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    pandas
    pyproj
    requests

python_requires = >= 3.8

[options.extras_require]
tests =
    flake8
    pytest
    pytest-cov
    
[options.packages.find]
include=hydws*

[flake8]
select = E,F,W
max_line_length = 79
ignore = E402, W503
exclude =
  .git,
  .tox,
  .eggs,
  .config,
  *.egg-info,
  __pycache__,
  .pytest_cache,
  env,
